--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -520,6 +520,36 @@
 					<i class="icon-only icon-12 icon-user2"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-thumbsup</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-thumbsup bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-thumbsup bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-thumbsup bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-thumbsup bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-thumbsup bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-thumbsup bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-thumbsup bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-thumbsup bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-thumbsup bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-thumbsdown</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-thumbsdown bg-icon-gray_1"></i>
+				</div>
+			</div>
 
 		</div>
 	</div>
