--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -495,7 +495,7 @@
 
 
 /* fund-result */
-.fund-result {padding-top:40px;}
+.fund-result {padding-top:40px;margin-bottom:24px;}
 .fund-result .result-title {display:flex;align-items:center;justify-content:center;text-align:center;font-size:16px;font-weight:700;line-height:1.5;margin-bottom:24px;}
 .fund-result .result-title span {font-size:18px;color:var(--status-active);vertical-align:top;}
 
@@ -935,7 +935,7 @@ button.flag-fluid span {margin-top:0;}
 .chatbody-intro .cha {position:absolute;left:8px;top:-50px;}
 
 .chatbody-notice {padding:0;}
-.chatbody-notice .message-text {display:block;}
+.chatbody-notice .message-text {display:block;padding:0;}
 .chatbody-notice .message-text {border-radius:0;background-color:transparent;box-shadow:none;}
 .chatbody-notice .message-text .swiper {padding:0 16px;}
 .chatbody-notice .message-text .swiper-slide {padding:16px 16px 32px;border-radius:16px;background-color:var(--surface-surface);box-shadow: 0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
@@ -970,15 +970,37 @@ button.flag-fluid span {margin-top:0;}
 .chatbody-notice .swiper-button-next:after {
     -webkit-mask-image:url(../images/arrow/arrow_swiper_next.svg);
     mask-image:url(../images/arrow/arrow_swiper_next.svg);
-
+    
 }
-.message-text {max-width:100%;}
+/* message-text */
+.message-text {max-width:100%;padding:24px 16px;}
 .message-text:not(:last-child) {margin-bottom:8px;}
-.message-text.left {float:left;clear:both;padding:24px 16px;}
+.message-text.left {float:left;clear:both;width:100%;}
 .message-text.right {float:right;clear:both;padding:8px 16px;background-color:var(--deepblue-500);}
 .message-text.right .text {color:var(--typography-white);}
 .message-text.right {}
-/* message-text */
+.message-text .sub-text {padding:8px;border-radius:4px;background-color:var(--surface-surface50);}
+.message-text .sub-text .tags {margin-bottom:4px;}
+.message-text .sub-text .title-small {margin-bottom:4px;}
+.message-text .number-list {}
+.message-text .number-list li {}
+.message-text .number-list > li:not(:last-child) {margin-bottom:24px;}
+.message-text .number-list-title {display:flex;align-items:center;gap:10px;margin-bottom:10px;}
+.message-text .number-list-title i {display:flex;align-items:center;justify-content:center;font-size:15px;color:var(--typography-white);line-height:27px;min-width:27px;flex:0 1 27px;background-color:var(--brandPrimary-blue500);border-radius:50px;}
+.message-text .number-list-title .date {font-size:14px;font-weight:400;color:var(--typography-caption);}
+.message-text .file-attach-list {margin-top:10px;}
+.message-text .file-attach-list a {display:inline-flex;border-radius:4px;background-color:var(--surface-surface50);padding:4px 8px;gap:10px;}
+.message-text .file-attach-list a:before {content:'';display:table-cell;flex:0 0 16px;width:16px;height:22px;background:url(../images/PBWAI/ico_file_attach.svg) center center / 16px 16px no-repeat;}
+.message-text .file-attach-list a:after {content:'';display:table-cell;flex:0 0 20px;width:20px;height:22px;background:url(../images/PBWAI/ico_file_attach_download.svg) center center / 20px 20px no-repeat;}
+.message-text .file-attach-list li:not(:last-child) {margin-bottom:4px;}
+.message-text .file-attach-list a span {font-size:14px;font-weight:400;color:var(--typography-black);line-height:22px;}
+.message-text .message-link {}
+.message-text .message-link li {}
+.message-text .message-link li a {display:inline-flex;font-size:15px;font-weight:400;color:var(--blue-400);border-radius:4px;background-color:var(--surface-surface50);padding:4px 8px;gap:4px;}
+.message-text .message-link li a:before {content:'';flex:0 0 24px;width:24px;height:24px;background:url(../images/PBWAI/ico_link.svg) center center / contain no-repeat;}
+
+.message-footer {display:flex;align-items:center;justify-content:space-between;}
+.message-footer .btn-rating-wrap {display:flex;padding:6px 12px;align-items:center;justify-content:center;gap:24px;}
 
 
 .chatbody [class^="message"]:nth-child(1) {-webkit-animation-delay:0s;animation-delay:0s;}
