--- a/html/components/component_tag.html
+++ b/html/components/component_tag.html
@@ -105,6 +105,7 @@
 					<div class="tags tags-small tags-disabled_bg">tags-disabled_bg</div>
 					<div class="tags tags-small tags-deepGray">tags-deepGray</div>
 					<div class="tags tags-small tags-gray">tags-gray</div>
+					<div class="tags tags-small tags-deepBlue">tags-deepBlue</div>
 
 				</div>
 			</div>
